--- a/index.html
+++ b/index.html
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Top 5 Queer Icons</title>
+    <title>Top 5 lists</title>
 </head>
     <body>
 <ol>
-    <l1>Top 5 Queer Icons</l1>
-    <li><a href="assets/oscarw.jpg">Oscar Wilde</a></li>
-    <li><a href="assets/Alan.jpg">Alan Turing</a></li>
-    <li><a href="assets/VitoRusso.jpg">Vito Russo</a></li>
-    <li><a href="assets/HarveyMilk.jpeg">Harvey Milk</a></li>
-    <li><a href="assets/flawlessSabrina.jpeg">Flawless Sabrina</a></li>
+    <l1> <h2>Top 5 Queer Icons</h2></l1>
+    <li><a href="assets/oscarw.jpg" target="_blank">Oscar Wilde</a></li>
+    <li><a href="assets/Alan.jpg" target="_blank">Alan Turing</a></li>
+    <li><a href="assets/VitoRusso.jpg" target="_blank">Vito Russo</a></li>
+    <li><a href="assets/HarveyMilk.jpeg" target="_blank">Harvey Milk</a></li>
+    <li><a href="assets/flawlessSabrina.jpeg" target="_blank">Flawless Sabrina</a></li>
     </ol>
+    <ol>
+            <l1> <h2>Top 5 Human Rights Icons</h2></l1>
+            <li><a href="assets/DalaiLama.jpeg" target="_blank">Dalai Lama</a></li>
+            <li><a href="assets/DesmondTutu.jpg " target="_blank">Desmond Tutu</a></li>
+            <li><a href="assets/Roblina.jpeg" target="_blank">Venerable Roblina</a></li>
+            <li><a href="assets/MichelleObama.jpeg" target="_blank">Michelle Obama</a></li>
+            <li><a href="assets/RosaParks.jpg" target="_blank">Rosa Parks</a></li>
+            </ol>
+            <ol>
+                    <l1> <h2>Top 5 Transgender Icons</h2></l1>
+                    <li><a href="assets/LaVenneno.jpg" target="_blank">La Veneno</a></li>
+                    <li><a href="assets/Pepermint.jpg" target="_blank">Pepermint</a></li>
+                    <li><a href="assets/MarshaP.jpg" target="_blank">Marsha P. Johnson</a></li>
+                    <li><a href="assets/JanetMock.jpg" target="_blank">Janet Mock</a></li>
+                    <li><a href="assets/lcox.jpg" target="_blank">Laverne Cox</a></li>
+                    </ol>
 
+                    <ol>
+                            <l1><h2>Top 5 Techno Dj's </h2></l1>
+                            <li><a href="assets/AdamB.jpg" target="_blank">Adam Beyer</a></li>
+                            <li><a href="assets/Moudaber.jpeg" target="_blank">Nicole Moudaber</a></li>
+                            <li><a href="assets/Ida.jpeg" target="_blank">Ida Engberg</a></li>
+                            <li><a href="assets/BenC.jpeg" target="_blank">Ben Clock</a></li>
+                            <li><a href="assets/Carl Cox.jpeg" target="_blank">Carl Cox</a></li>
+                            </ol>
+
+                            <ol>
+                                    <l1> <h2>Top 5 Cannabis Strains </h2></l1>
+                                    <li><a href="assets/bb.jpeg" target="_blank">Blueberry</a></li>
+                                    <li><a href="assets/laconf.jpeg" target="_blank">L.A Confidential</a></li>
+                                    <li><a href="assets/sensi.jpeg" target="_blank">Sensi Star</a></li>
+                                    <li><a href="assets/sour.jpeg" target="_blank">Sour Diesel</a></li>
+                                    <li><a href="assets/Og.jpg" target="_blank">O.G Kush</a></li>
+                                    </ol>
 </body>
 </html>
